NextGenAppPackage/main/default/objects/Account__x/Account__x.object-meta.xml
<CustomObject>
    <externalDataSource>connect_to_salesforce</externalDataSource>
    <externalName>Account</externalName>
    <label>Account</label>
    <pluralLabel>Accounts</pluralLabel>
</CustomObject>