NextGenAppPackage/main/default/objects/Account__x/fields/Active_c__c.field-meta.xml
<CustomField>
    <fullName>Active_c__c</fullName>
    <externalDeveloperName>Active__c</externalDeveloperName>
    <label>Active</label>
    <length>255</length>
    <type>Text</type>
</CustomField>