NextGenAppPackage/main/default/objects/Account__x/fields/BillingGeocodeAccuracy__c.field-meta.xml
<CustomField>
    <fullName>BillingGeocodeAccuracy__c</fullName>
    <externalDeveloperName>BillingGeocodeAccuracy</externalDeveloperName>
    <label>Billing Geocode Accuracy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>