NextGenAppPackage/main/default/objects/Account__x/fields/CleanStatus__c.field-meta.xml
<CustomField>
    <fullName>CleanStatus__c</fullName>
    <externalDeveloperName>CleanStatus</externalDeveloperName>
    <label>Clean Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>