NextGenAppPackage/main/default/objects/Account__x/fields/Customer_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_c__c</fullName>
    <externalDeveloperName>Customer_ID__c</externalDeveloperName>
    <label>Customer ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>