NextGenAppPackage/main/default/objects/Account__x/fields/CustomerPriority_c__c.field-meta.xml
<CustomField>
    <fullName>CustomerPriority_c__c</fullName>
    <externalDeveloperName>CustomerPriority__c</externalDeveloperName>
    <label>Customer Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>