NextGenAppPackage/main/default/objects/Account__x/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <externalDeveloperName>Rating</externalDeveloperName>
    <label>Account Rating</label>
    <length>40</length>
    <type>Text</type>
</CustomField>