NextGenAppPackage/main/default/objects/Account__x/fields/ShippingGeocodeAccuracy__c.field-meta.xml
<CustomField>
    <fullName>ShippingGeocodeAccuracy__c</fullName>
    <externalDeveloperName>ShippingGeocodeAccuracy</externalDeveloperName>
    <label>Shipping Geocode Accuracy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>