NextGenAppPackage/main/default/objects/Account__x/fields/SLA_c__c.field-meta.xml
<CustomField>
    <fullName>SLA_c__c</fullName>
    <externalDeveloperName>SLA__c</externalDeveloperName>
    <label>SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>