NextGenAppPackage/main/default/objects/Account__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <externalDeveloperName>Type</externalDeveloperName>
    <label>Account Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>