NextGenAppPackage/main/default/objects/Account__x/fields/UpsellOpportunity_c__c.field-meta.xml
<CustomField>
    <fullName>UpsellOpportunity_c__c</fullName>
    <externalDeveloperName>UpsellOpportunity__c</externalDeveloperName>
    <label>Upsell Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>